force-app/main/default/objects/BMCServiceDesk__BMC_SystemComponent__c/BMCServiceDesk__BMC_SystemComponent__c.object-meta.xml
<CustomObject>
    <description>BMC_SystemComponent. CMDB Abstract class that defines elements that compose a system. These elements can consist of hardware or logical system components. By definition, abstract classes cannot hold any instances. You use them only in special cases to organize subclasses so that you have the flexibility to add a layer of organization without a database join.  Therefore, you might use subclasses such as BMC_HardwareSystemComponent and BMC_LogicalSystemComponent to represent particular types of system components. For example, you might group a specific processor as an instance of BMC_HardwareSystemComponent, and a software package for that processor as an instance of BMC_LogicalSystemComponent. The BMC_SystemComponent class shares a close association with the BMC_System class. The main relationship between the two is the BMC_HostedSystemComponenents relationship, enabling you to model a complete computer system by linking a PC with all of its components.</description>
    <label>System Component</label>
    <nameField>
        <label>BMC_SystemComponent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>