force-app/main/default/objects/BMCServiceDesk__BMC_SystemComponent__c/fields/BMCServiceDesk__isVirtual__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__isVirtual__c</fullName>
    <label>Is Virtual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>