force-app/main/default/objects/BMCServiceDesk__BMC_SystemComponent__c/fields/BMCServiceDesk__SystemClassId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SystemClassId__c</fullName>
    <label>System Class ID</label>
    <length>38</length>
    <type>Text</type>
</CustomField>