force-app/main/default/objects/BMCServiceDesk__BMC_SystemComponent__c/fields/BMCServiceDesk__SystemName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SystemName__c</fullName>
    <label>System Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>